# DSiDLQRGen

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp  qrgen.cpp  qrgen.h
